Add axios, detailpage setup/functionality

--- a/src/components/GameTop50List.scss
+++ b/src/components/GameTop50List.scss
@@ -11,7 +11,7 @@ ul {
 }
 
 span {
-  background-color: red;
+  background-color: #161699;
   color: white;
   font-weight: bolder;
   padding: 0.5rem;
