--- a/src/components/GameCard.scss
+++ b/src/components/GameCard.scss
@@ -15,29 +15,28 @@
   .center-left {
     position: absolute;
     bottom: 30%;
-    left: 16px;
+    left: 1rem;
   }
   .medium-bottom-left {
     position: absolute;
     bottom: 16%;
-    left: 16px;
+    left: 1rem;
   }
   .lowest-bottom-left {
     position: absolute;
     bottom: 8%;
-    left: 16px;
+    left: 1rem;
   }
   .top-right {
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
-    font: 32px Arial, sans-serif;
+    font: 2rem Arial, sans-serif;
     font-weight: bold;
 
     width: 2em;
     height: 2em;
     box-sizing: initial;
-
     background-color: rgba(123, 117, 117, 0.387);
     border: 0.1em solid white;
     color: white;
