--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,6 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: Gotham SSm A, Gotham SSm B, sans-serif, Arial, Verdana;
+  max-width: 1440px;
   margin: auto;
   padding: 0;
   -webkit-font-smoothing: antialiased;
@@ -10,8 +9,4 @@ body {
 * {
   // background-color: #69cc84;
   box-sizing: border-box;
-}
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
