styling hover game list

--- a/src/components/DetailPage.scss
+++ b/src/components/DetailPage.scss
@@ -54,4 +54,26 @@
     border-radius: 3px;
     box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.26);
   }
+
+  ul > li {
+    display: inline-block;
+    zoom: 0.75;
+  }
+
+  li:hover {
+    zoom: 1;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  span {
+    background-color: #161699;
+    color: white;
+    font-weight: bolder;
+    padding: 0.5rem;
+  }
 }
