--- a/src/components/GameTop50List.scss
+++ b/src/components/GameTop50List.scss
@@ -1,22 +1,25 @@
-ul > li {
-  display: inline-block;
-  /* You can also add some margins here to make it look prettier */
-  zoom: 0.75;
-}
+.game-list {
+  ul > li {
+    display: inline-block;
+    /* You can also add some margins here to make it look prettier */
+    zoom: 0.75;
+    opacity: 0.85;
+  }
 
-li:hover {
-  zoom: 1;
-}
+  li:hover {
+    opacity: 1;
+  }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
 
-span {
-  background-color: #161699;
-  color: white;
-  font-weight: bolder;
-  padding: 0.5rem;
+  span {
+    background-color: #161699;
+    color: white;
+    font-weight: bolder;
+    padding: 0.5rem;
+  }
 }
