--- a/src/components/LandingPage.scss
+++ b/src/components/LandingPage.scss
@@ -26,7 +26,8 @@
         height: auto;
       }
       .pc {
-        width: 60%;
+        width: 50%;
+        padding-bottom: 1.5rem;
       }
     }
 
