--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -5,14 +5,16 @@
   width: 100%;
   background-color: #69cc84;
 
+  border-bottom-color: #00000042;
+
   .container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     justify-items: center;
     flex-direction: row;
     margin: 0 120px;
     padding: 20px 0;
-    a.logo {
+    .logo {
       img {
         width: 100%;
         max-width: 72px;
