view: added pc-games page and all needed ot get data in view

--- a/src/components/GameCard.scss
+++ b/src/components/GameCard.scss
@@ -12,20 +12,11 @@
     width: 100%;
     height: auto;
   }
-  .center-left {
-    position: absolute;
-    bottom: 30%;
-    left: 1rem;
-  }
   .medium-bottom-left {
     position: absolute;
     bottom: 16%;
     left: 1rem;
-  }
-  .lowest-bottom-left {
-    position: absolute;
-    bottom: 8%;
-    left: 1rem;
+    text-decoration: none;
   }
   .top-right {
     position: absolute;
