--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,11 @@
 body {
   font-family: Gotham SSm A, Gotham SSm B, sans-serif, Arial, Verdana;
-  max-width: 1440px;
+  // max-width: 1440px;
   margin: auto;
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 * {
-  // background-color: #69cc84;
   box-sizing: border-box;
 }
