styling landin page

--- a/src/components/LandingPage.scss
+++ b/src/components/LandingPage.scss
@@ -20,6 +20,7 @@
     cursor: default;
   }
   .choose-interest {
+    padding-left: 0 !important;
     .nav-link {
       .profile-image {
         width: 65%;
