clean up & remove searchbar

--- a/src/components/GameCard.scss
+++ b/src/components/GameCard.scss
@@ -4,20 +4,16 @@
   font-size: 1rem;
   font-weight: 600;
   padding: 0 0.1rem;
-  width: 250px;
-  height: 350px;
+  width: 11.75rem;
+  height: auto;
+
   text-decoration: none;
 
   img {
     width: 100%;
     height: auto;
   }
-  .medium-bottom-left {
-    position: absolute;
-    bottom: 16%;
-    left: 1rem;
-    text-decoration: none;
-  }
+
   .top-right {
     position: absolute;
     top: 0.5rem;
